ECommerceApp/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modularmonolith-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /modulith
            pathType: Prefix
            backend:
              service:
                name: modularmonolith-service
                port:
                  number: 8080
